--- a/templates/connexion.html.twig
+++ b/templates/connexion.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Connexion</title>
-    <link rel="stylesheet" href="{{ asset('styles/global.css') }}">
+    <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
     <link rel="stylesheet" href="{{ asset('styles/pages/connexion.css') }}">
 </head>
 <body>
