--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,12 +8,14 @@
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.nom) }}
+        {{ form_row(registrationForm.prenom) }}
         {{ form_row(registrationForm.mail) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+{#        <button type="submit" class="btn">Register</button>#}
     {{ form_end(registrationForm) }}
 {% endblock %}
