--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
             <div class="row h-100">
                 <div class="col-6 m-auto">
                     <form method="post" class="border border-light p-2 border-2 rounded-2 m-auto">
-                        <img src="{{ asset('images/logo.png') }}" class="rounded mx-auto d-block img-fluid">
+                        <img alt="Logo Limayrac" src="{{ asset('images/logo.png') }}" class="rounded mx-auto d-block img-fluid">
                         <h1 class="h3 mb-3 font-weight-normal text-center"><b>Connexion</b></h1>
                         <div class="mb-3">
                             <label for="username" class="col-form-label">Adresse email</label>
