--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -7,6 +7,7 @@
         <a class="button back-button" href="{{ path('home') }}">Retour à l'index</a>
         <h1>Page Admin</h1>
         <p>Voici la liste des utilisateurs</p>
+
         <div class="user-list">
             <table class="table table-bordered">
                 <thead>
@@ -24,7 +25,7 @@
                         <td>{{ user.nom }}</td>
                         <td>{{ user.prenom }}</td>
                         <td>{{ user.mail }}</td>
-{#                        <td>{{ user.roles | join(', ') }}</td>#}
+                        {#                        <td>{{ user.roles | join(', ') }}</td>#}
                         <td>{% set roleNames = {
                                 'ROLE_USER': 'Utilisateur',
                                 'ROLE_ADMIN': 'Administrateur'
@@ -34,53 +35,33 @@
                                 <button type="submit" class="btn btn-primary">Modifier</button>
                             </div></td>
                         <td><div class="text-center">
-                                <button type="submit" class="btn btn-danger">Supprimer</button>
+                                <button type="submit" class="btn btn-danger"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">Supprimer</button>
                             </div></td>
                     </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
-        <button type="submit" class="btn btn-primary">Ajouter</button>
+        <!-- Autres boutons pour plus tard -->
+        <button type="submit" class="btn btn-primary">Ajouter un utilisateur</button>
+    </div>
+    </div>
 
-        <div class="container">
-            <h1 class="text-success">
-                GeeksforGeeks
-            </h1>
-            <h2>Bootstrap 5 Modal Vertically centered</h2>
-            <button type="button"
-                    class="btn btn-success"
-                    data-toggle="modal"
-                    data-target="#GFG">
-                Launch Vertically Centered modal
-            </button>
 
-            <div class="modal fade" id="GFG">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">
-                                I am modal vertically centered
-                            </h5>
-
-                        </div>
-                        <div class="modal-body">
-                            GeeksforGeeks
-                            <img src=
-                                 "https://media.geeksforgeeks.org/wp-content/cdn-uploads/Java.png"
-                                 height="100px"
-                                 width="300px">
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn"
-                                    data-dismiss="modal">
-                                Close
-                            </button>
-                            <button type="button" class="btn">
-                                Save changes
-                            </button>
-                        </div>
-                    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Suppression de l'utilisateur</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Attention, vous êtes sur le point de supprimer cet utilisateur. Continuer ?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                    <button type="button" class="btn btn-danger">Supprimer</button>
                 </div>
             </div>
         </div>
