--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -32,7 +32,7 @@
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary">Se connecter</button>
-                            <a href="{{ path('app_register') }}"><button type="submit" class="btn btn-secondary">S'inscrire</button></a>
+                            <a href="{{ path('app_register') }}" class="btn btn-secondary">S'inscrire</a>
                         </div>
                     </form>
                 </div>
