--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -87,105 +87,105 @@
             </div>
             <div class="col-12 col-lg-9" style="height: 100%">
                 <div class="overflow-y-scroll" style="max-height: 85%">
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
+                        <div class="col-6 text-break">Message 155555555555555555555555555555555555555555555555555555555555</div>
+                    </div>
+                    <div class="row justify-content-end text-end" style="width: 99%">
+                        <div class="col-6 justify-content-end text-break text-end">Message 255555555555555555555555555555555555555555555555555</div>
+                    </div>
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
-                    <div class="row" style="width: 80%">
+                    <div class="row" style="width: 99%">
                         <div class="col-3">Message 1</div>
                     </div>
-                    <div class="row justify-content-end" style="width: 80%">
-                        <div class="col-3 justify-content-end">Message 2</div>
-                    </div>
-                    <div class="row" style="width: 80%">
-                        <div class="col-3">Message 1</div>
-                    </div>
-                    <div class="row justify-content-end" style="width: 80%">
+                    <div class="row justify-content-end" style="width: 99%">
                         <div class="col-3 justify-content-end">Message 2</div>
                     </div>
                 </div>
                 <form method="post">
-                    <div class="fixed-bottom input-group mb-3">
+                    <div class="fixed-bottom input-group p-2">
                         <!-- TODO mettre le input hidden des commissions -->
                         <input type="text" class="form-control" placeholder="Message" aria-label="Message" aria-describedby="basic-addon2">
                         <div class="input-group-append align-content-center">
