Add responsive class

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -8,7 +8,7 @@
         <h1>Page Admin</h1>
         <p>Voici la liste des utilisateurs</p>
 
-        <div class="user-list">
+        <div class="table-responsive">
             <table class="table table-bordered">
                 <thead>
                 <tr class="text-center">
@@ -45,8 +45,6 @@
         <!-- Autres boutons pour plus tard -->
         <button type="submit" class="btn btn-primary">Ajouter un utilisateur</button>
     </div>
-    </div>
-
 
     <!-- Modal -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
