--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,7 +10,7 @@
 
     {% if app.user %}
         <script type="text/javascript">
-            window.location.href = "{{ path('conversation') }}";
+            window.location.href = "{{ path('home') }}";
         </script>
     {% endif %}
 
